# 500lines

code-generator/: package-lock.json  package.json  transpiler_class_getattr.js  transpiler_class_to_es5.js  transpiler_json_to_js.js  transpiler_removing_empty_constructor.js
dagoba/: pyproject.toml
modeller/: .gitignore  board_config.py  color.py  interaction.py  model_loading.py  node.py  objloader.py  primitive.py  pyproject.toml  scene.py  trackball.py  transformation.py  viewer.py
modeller-migrated/: aabb.py  interaction.py  node.py  primitive.py  scene.py  trackball.py  viewer.py
objmodel/: model_01_smalltalk_like.py  model_04_maps.py  pyproject.toml  test_01.py
