[tool.poetry]
name = "modeller-migrated"
version = "0.1.0"
description = ""
authors = ["Beomsoo Kim <beoms424@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipython = "^8.25.0"
pdbpp = "^0.10.3"
pre-commit = "^3.7.1"
isort = "^5.13.2"
numpy = "^1.26.4"
pyopengl = "^3.1.7"
pyfbx = "^0.0.8"
pywavefront = "^1.3.3"
imageio = "^2.34.2"
pygame = "^2.6.0"
pygltflib = "^1.16.2"
glfw = "^2.7.0"
pyglet = "^2.0.15"
gltf = "^0.7.20"
pyglm = "^2.7.1"
pyrr = "^0.10.3"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.0"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
