[tool.poetry]
name = "objmodel"
version = "0.1.0"
description = ""
authors = ["Beomsoo Kim <beoms424@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipython = "^8.26.0"
pdbpp = "^0.10.3"
pre-commit = "^3.8.0"
isort = "^5.13.2"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
mypy = "^1.11.1"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
